# Reading_Mate

./: .gitignore  1_data_preparation.ipynb  2_rag_agent_graph.ipynb  README.md  comfyui_client.py  config.yaml  data_preparation.py  data_translate.py  main.py  make_agent.ipynb  prompt_generator.py  pyproject.toml  vector_search.py
99_vectorstore/e_book_db/: chroma.sqlite3
backend/: README.md  requirements.txt  run.py
backend/app/: .env.example  __init__.py  config.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: rag.py
backend/app/core/: __init__.py  database.py  merger.py  planner.py  system.py  test.py  vector_store.py
backend/app/core/engines/: __init__.py  evaluator.py  rag.py  web_search.py
backend/app/models/: __init__.py  request.py  response.py
backend/app/prompts/: __init__.py  evaluator_prompts.py  merge_prompts.py  planner_prompts.py  rag_prompts.py  web_prompts.py
backend/notebooks/: test.ipynb
frontend/: README.md  app.py  config.py
frontend/components/: book_viewer.py  qa_interface.py  sidebar.py
frontend/services/: api_client.py
frontend/utils/: pdf_handler.py  text_handler.py
